[package]
name = "libdatachannel_signaling_server_example"
version = "0.2.0"
authors = ["Paul-Louis Ageneau"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tokio = { version = "*", features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "*"
futures-util = "*"
futures-channel = "*"
json = "*"

